--- a/cdc-web/src/views/layout.html
+++ b/cdc-web/src/views/layout.html
@@ -7,56 +7,8 @@
           <i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
         </a>
       </li>
-      <!--<li class="layui-nav-item layui-this layui-hide-xs layui-hide-sm layui-show-md-inline-block">
-        <a lay-href="" title="">
-          控制台
-        </a>
-      </li>-->
-      <!--
-      <li class="layui-nav-item layui-hide-xs" lay-unselect>
-        <a href="http://www.baidu.com#/" target="_blank" title="前台">
-          <i class="layui-icon layui-icon-website"></i>
-        </a>
-      </li>
-      <li class="layui-nav-item" lay-unselect>
-        <a href="javascript:;" layadmin-event="refresh" title="刷新">
-          <i class="layui-icon layui-icon-refresh-3"></i>
-        </a>
-      </li>
-      <li class="layui-nav-item layui-hide-xs" lay-unselect>
-        <input type="text" placeholder="搜索..." autocomplete="off" class="layui-input layui-input-search" layadmin-event="serach" lay-action="template/search/keywords=">
-      </li>
-      //-->
     </ul>
     <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
-      <!--
-      <li class="layui-nav-item" lay-unselect>
-        <a lay-href="app/message/" layadmin-event="message">
-          <i class="layui-icon layui-icon-notice"></i>
-          <script type="text/html" template lay-url="./json/message/new.js">
-          {{# if(d.data.newmsg){ }}
-            <span class="layui-badge-dot"></span>
-          {{# } }}
-          </script>
-
-        </a>
-      </li>
-      <li class="layui-nav-item layui-hide-xs" lay-unselect>
-        <a href="javascript:;" layadmin-event="theme">
-          <i class="layui-icon layui-icon-theme"></i>
-        </a>
-      </li>
-      <li class="layui-nav-item layui-hide-xs" lay-unselect>
-        <a href="javascript:;" layadmin-event="note">
-          <i class="layui-icon layui-icon-note"></i>
-        </a>
-      </li>
-      <li class="layui-nav-item layui-hide-xs" lay-unselect>
-        <a href="javascript:;" layadmin-event="fullscreen">
-          <i class="layui-icon layui-icon-screen-full"></i>
-        </a>
-      </li>
-      //-->
       <li class="layui-nav-item" lay-unselect>
         <script type="text/html" template lay-url="/api/me"
         lay-done="layui.element.render('nav', 'layadmin-layout-right');">
@@ -71,7 +23,7 @@
             <dd><a lay-href="profile/me">个人信息</a></dd>
             <dd><a lay-href="profile/change-password">修改密码</a></dd>
             <hr>
-            <dd layadmin-event="logout" style="text-align: center;"><a>退出</a></dd>
+            <dd layadmin-event="logout" style="text-align: center;"><a lay-href="/user/logout">退出</a></dd>
           </dl>
         </script>
       </li>
